package ar.edu.utn.frba.dds.modelo.fuente;

public enum TipoFuente {
  PROXY_DDS
}
